--- a/css/templatemo-comparto.css
+++ b/css/templatemo-comparto.css
@@ -66,6 +66,7 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 .tm-mb-2 { margin-bottom: 40px; }
 .tm-mb-3 { margin-bottom: 60px; }
 .tm-mb-4 { margin-bottom: 30px; }
+.mt-1 { margin-top: 20px;}
 .tm-bg-color-1 { background-color: #9999CC; }
 .tm-bg-color-2 { background-color: #CC9999; }
 .tm-bg-color-3 { background-color: #666666; }
@@ -75,6 +76,8 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 .tm-bg-color-7 { background-color: #DDD; }
 .tm-bg-color-8 { background-color: #EDEEEF; } /* Nav background */
 .tm-bg-color-white { background-color: white; }
+.bg-color-9 { background-color: #87e5ed; }
+.bg-color-10 { background-color: #424d52; }
 .tm-text-color-1 { color: #666; }
 .tm-text-color-2 { color: #333; }
 .tm-text-white { color: #fff; }
@@ -89,30 +92,32 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 }
 
 .tm-site-name-container {
-    width: 29.752%;
+    width: 100%;
     min-width: 300px;
-    margin-right: 20px;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     text-transform:uppercase;
+	text-align: center;
 }
 
 .tm-nav-container {
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  width: 68.595%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   height: 100%;
   padding: 20px;
+  margin-bottom: 20px;
 }
 
 .tm-nav-item {
   list-style: none;
   display: inline-block;
-  width: 145px;
-  height: 145px;
+  width: 175px;
+  height: 150px;
   margin-right: 15px;
   background-color: white;
 }
@@ -156,7 +161,7 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 25%;
+  padding-left: 15%;
   font-size: 1.2rem;
 }
 
@@ -178,16 +183,34 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 .tm-img-responsive {
   max-width: 100%;
   height: auto;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 20px;
+}
+
+.img-responsive {
+  max-width: 100%;
+  height: 50%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 20px;
+}
+
+.img-inside {
+	float: right;
 }
 
 .tm-section-1-l {
   width: 57.85%;
   margin-right: 1.65%;
+  margin-bottom: 20px;
 }
 
 .tm-section-1-r {
   padding: 50px 40px;
-  width: 40.5%;
+  width: 100%;
 }
 
 .tm-row { display: flex; }
@@ -220,8 +243,7 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 .tm-icon-inner h3 { line-height: 1.7; }
 
 .tm-section-2-l {
-  width: 40.5%;
-  margin-right: 1.65%;
+  width: 100%;
 }
 
 .tm-section-2-r { width: 57.85%; }
@@ -259,6 +281,7 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 /* Gallery */
 .tm-gallery-header { padding: 40px 40px 30px; }
 .text-right { text-align: right; }
+.text-left { text-align: left; }
 
 .tm-gallery-filter {
   text-align: center;
@@ -278,24 +301,38 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
   color: #fff;
 }
 
-.tm-gallery-section { padding-bottom: 40px; }
+.tm-gallery-section { 
+	padding-bottom: 40px;
+	display: flex;
+	flex-direction: column;
+}
+
+.section-4 {
+	display: flex;
+	flex-direction: column;
+}
 
 .tm-gallery-outer {
-  margin-left: -10px;
-  margin-right: -10px;
+  /*margin-left: -10px;
+  margin-right: -10px;*/
   background-color: white;
+  justify-content: center;
 }
 
 .tm-gallery {
   padding-top: 10px;
   padding-bottom: 10px;
-  margin: 0 auto 0;  
-  max-width: 1225px;  
+  margin: 0 auto 0 10px; 
+  /*max-width: 1225px;*/
+/*  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;*/
 }
 
 .tm-gallery-item { 
   padding: 10px; 
-  width: 20%;
+  width: 33%;
 }
 
 @media (max-width: 1200px) {
@@ -478,6 +515,7 @@ figure.effect-bubba:hover p {
   padding-top: 55px;
   padding-bottom: 60px;
   text-align: center;
+  
 }
 
 #contact { padding-bottom: 40px; }
@@ -489,12 +527,12 @@ figure.effect-bubba:hover p {
 }
 
 .map-outer {
-  position:relative;
-  text-align:right;
-  min-height:400px; 
-  width:35%; 
+  /*position:relative;
+  text-align:right;*/ 
+  min-height:400px;
+  width: 100%
   height: 100%;
-  padding-right: 10px;
+  /*padding-right: 10px;*/
 }
 
 .gmap-canvas {
@@ -504,8 +542,8 @@ figure.effect-bubba:hover p {
   width:100%;
 }
 
-.contact-form-outer { width: 37%; }
-.contact-info-outer { width: 28%; }
+/*.contact-form-outer { width: 37%; }
+.contact-info-outer { width: 28%; }*/
 
 .contact-form-outer {
   padding-left: 10px;
